--- a/index.html
+++ b/index.html
@@ -23,45 +23,18 @@
         <!-- Weather Section -->
         <div class="weather-section">
             <div class="current-weather">
-                <img src="icons/clouds.svg" alt="" class="weather-icon">
-                <h2 class="temperature">20<span>°C</span></h2>
-                <p class="description">Partly cloudy</p>
+                <img src="icons/sun.gif" alt="" class="weather-icon">
+                <h2 class="temperature">WeatherWizz</h2>
+                <p class="description">Choose a city you wish to know about</p>
             </div>
         </div>
         <div class="hourly-weather">
             <ul class="weather-list">
-                <li class="weather-item">
-                    <p class="time">00:00</p>
-                    <img src="icons/clouds.svg" alt="" class="weather-icon">
-                    <p class="temperature">20°C</p>
-                </li>
-                <li class="weather-item">
-                    <p class="time">00:00</p>
-                    <img src="icons/clouds.svg" alt="" class="weather-icon">
-                    <p class="temperature">20°C</p>
-                </li>
-                <li class="weather-item">
-                    <p class="time">00:00</p>
-                    <img src="icons/clouds.svg" alt="" class="weather-icon">
-                    <p class="temperature">20°C</p>
-                </li>
-                <li class="weather-item">
-                    <p class="time">00:00</p>
-                    <img src="icons/clouds.svg" alt="" class="weather-icon">
-                    <p class="temperature">20°C</p>
-                </li>
-                <li class="weather-item">
-                    <p class="time">00:00</p>
-                    <img src="icons/clouds.svg" alt="" class="weather-icon">
-                    <p class="temperature">20°C</p>
-                </li>
-                <li class="weather-item">
-                    <p class="time">00:00</p>
-                    <img src="icons/clouds.svg" alt="" class="weather-icon">
-                    <p class="temperature">20°C</p>
-                </li>
+                
             </ul>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
