Location based weather enabled.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             </button>
         </div>
 
+        <div class="no-results">
+            <img src="icons/dizzy-robot.png" alt="" class="weather-icon">
+            <h3 class="title">Something went wrong!</h3>
+            <p class="message">We're unable to retrieve the weather details. Ensure you've entered a valid city or try again later.</p>
+        </div>
+
         <!-- Weather Section -->
         <div class="weather-section">
             <div class="current-weather">
